packages/components/src/components/Switch/styles/switch.module.scss
/* (c) Copyright Frontify Ltd., all rights reserved. */

@use '../../../utilities/sizeToken.module.scss';
@use '../../../utilities/focusStyle.module.scss';
@use '../../../utilities/transitions.module.scss';

.root {
    position: relative;
    background-color: var(--box-neutral-color);
    border: 1px solid var(--line-color-x-strong);

    &:enabled:hover {
        background-color: var(--box-neutral-color-hover);
    }

    &.small {
        --switch-width: #{sizeToken.get(6)};
        --switch-height: #{sizeToken.get(3)};
    }

    &.medium {
        --switch-width: #{sizeToken.get(7.5)};
        --switch-height: #{sizeToken.get(4)};
    }

    &.large {
        --switch-width: #{sizeToken.get(9)};
        --switch-height: #{sizeToken.get(5)};
    }

    & {
        width: var(--switch-width, 10px);
        height: var(--switch-height, 10px);
        border-radius: calc(var(--switch-height) / 2);
        @include focusStyle.focus-outline;
        @include transitions.transition-colors;
    }

    &[data-state='checked'] {
        background-color: var(--text-color-weak);

        &:enabled:hover {
            background-color: var(--box-neutral-strong-color-hover);
        }
    }

    &:disabled {
        border-color: var(--line-color);
        background-color: var(--box-neutral-color);

        .thumb {
            border-color: var(--line-color-strong);
        }
    }
}

.thumb {
    display: block;
    transform: translate(-1px, -1px);
    will-change: transform;
    box-sizing: border-box;
    width: calc(var(--switch-height));
    height: calc(var(--switch-height));

    background-color: var(--base-color);
    border-radius: 9999px;
    border: 1px solid var(--box-neutral-inverse-color);

    & {
        @include transitions.transition-transform;
    }

    &[data-state='checked'] {
        transform: translate(calc(var(--switch-width) - 100% + 1px), -1px);
    }
}

